<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
         tools:context=".MainActivity">

         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvMobileNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/enter_mobile_number"
             android:layout_marginBottom="10dp"
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/edtMobileNumber"
             />
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edtMobileNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="1234567952"
             android:paddingStart="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSendOtp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/send_opt"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/edtMobileNumber"/>


     </androidx.constraintlayout.widget.ConstraintLayout>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.example.covid19tracker.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivVerification"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/img_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMobileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivVerification" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:text="@string/we_will_send_you_and_an_one_time_password_on_this_mobile_number"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMobileText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEnterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/enter_mobile_number"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMessage" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtMobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:background="@null"
                android:hint="@string/_7898524620"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEnterText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/GetOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:background="@color/purple_500"
                android:text="@string/get_otp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtMobileNumber"

                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtMobileNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>